src/less/case-study.less
// Fix anchor links under fixed nav-bar
:target::before {
  content: '';
  display: block;
  height: 74px; /* fixed header height*/
}

@media (max-width: 900px) {
  .figure-img {
    justify-content: start !important;
  }
  .overflow-x {
    overflow-x: scroll;
  }

  .overflow-hidden {
    overflow: hidden;
  }
}

.max-width-560 {
  max-width: 560px;
  margin: 0 auto;
}

.with-bullets {
  list-style: disc;
  padding: 0 2rem 2rem;
}

.with-special-numbers {
  columns: 2;
  padding: 2rem;
  border-bottom: 1px solid #e0e0e0;
  border-top: 1px solid #e0e0e0;
  li {
    a {
      display: flex;
      align-items: center;
      font-size: 1.25rem;
      span {
        border-radius: 50%;
        width: 26px;
        height: 26px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        margin-right: 1rem;
        background: linear-gradient(259.13deg, #e2f6ff 3.24%, #79d5ff 99.63%);
        border: solid 1px lightblue;
      }
    }
  }
}

.two-columns {
  display: flex;
  column-gap: 6rem;
}

.uppercase {
  text-transform: uppercase;
}

.stack {
  flex-direction: column;
  align-items: center;
  padding: 0 !important;
  img {
    padding-top: 2rem;
  }
}

#problems-goals {
  h2 {
    font-size: 1.875rem;
    span {
      font-size: 2.5rem !important;
    }
  }
}

// Hero section
.case-study {
  background: linear-gradient(238.06deg, rgba(199, 252, 255, 0.75) 39.54%, #a9c6ff 97.64%);
  padding: 5rem 0;
  height: auto;
  padding-bottom: 0;
  #case-study-title {
    max-width: 668px;
    margin: 0 auto;
    padding: 3rem 0 0;
    h1 {
      font-family: @font-heading;
      font-size: 2.625rem;
      line-height: 3.125rem;
      font-weight: 700;
      text-align: center;
      transition: all 0.5s ease;
    }
  }
  #case-study-img {
    display: flex;
    justify-content: center;
    padding: 3rem 0 0;
    img {
      width: 90%;
      max-width: 900px;
      transition: all 0.5s ease;
    }
  }
}
//Media Query 600px
@media (max-width: 600px) {
  ::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
  }
}

// Main - case study content
.case-study-main {
  //Section styling
  .p-container {
    width: 100%;
    //margin: 0 auto;
    padding: 2rem 0;
    .section-title {
      h2 {
        font-size: 1.875rem;
        color: #27344e;
        padding-bottom: 1rem;
        line-height: 2rem;
      }
    }
    .section-content {
      h4 {
        font-size: 1.1rem;
        font-weight: 600;
      }
    }

    //General image styling under figure class
    .figure {
      margin-bottom: 2rem;
      //background: #eef5f9;
      .figure-img {
        display: flex;
        justify-content: center;
      }
      img {
        max-width: 900px;
        max-height: 600px;
      }
      #addvehicle-img,
      #menu-img {
        width: 600px !important;
      }
    }
    //Project background
    .three-column {
      padding-top: 1rem;
      text-align: center;
      .column {
        margin-bottom: 1rem;
        p {
          line-height: 1.6rem;
        }
        img {
          filter: brightness(75%);
        }
      }

      //Media query 600px - three column
      @media (min-width: 600px) {
        display: flex;
        justify-content: space-around;
        .three-column {
          .column {
            padding: 0 2rem;
            p {
              padding: 0.5rem 0;
            }
          }
        }
      }
    }
    //Painpoints and wants
    .painpoints,
    .wants {
      padding-bottom: 2rem;
      h3 {
        text-align: center;
      }
      ul {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        li {
          flex-shrink: 1;
          font-size: 1rem;
          padding: 0 1rem;
          margin: 4px;
          border-radius: 1.2rem;
          transition: all 0.5s ease;
          @media (min-width: 200px) and (max-width: 500px) {
            font-size: 0.8rem;
            line-height: 1.5rem;
          }
        }
      }
    }
    .painpoints {
      li {
        background-color: #f8e9dd;
      }
    }

    .wants {
      li {
        background-color: #d4f0f6;
      }
    }
    //Highlight
    .highlight {
      width: 80%;
      border-left: 6px solid #1fb1d1;
      padding-left: 2rem;
      margin: 1rem 0rem 2rem 2rem;
      p {
        font-family: @font-heading;
        font-size: 1.5rem;
        font-weight: 500;
        font-style: italic;
        color: #71737b;
        line-height: 2.25rem;
      }
      .yes-no {
        display: flex;
        width: 100%;
        .yes,
        .no {
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 1rem 2rem;
          border-radius: 0.5rem;
          margin-right: 2rem;
          h3 {
            font-size: 1.4rem;
          }
          p {
            color: @text-body;
            font-size: 1.5rem;
            font-weight: 600;
            font-style: normal;
            line-height: 0;
            padding-top: 1rem;
          }
        }
        .yes {
          background-color: #d4f0f6;
        }
        .no {
          background-color: #f8e9dd;
        }
      }
    }
    h3 {
      font-weight: 600;
      font-size: 1.2rem;
    }
    h4 {
      font-weight: 500;
      font-size: 1.2rem;
    }
  }

  //The Big RV picture illustration

  @media (max-width: 900px) {
    padding: 0 1.5rem !important;
    .full-width-background {
      margin: -1.5rem;
    }
  }
  .full-width-background {
    width: 99vw;
    padding-bottom: 0;
    background-color: #eefaff;
  }
}

.card-container {
  margin: 0 auto;
  padding-bottom: 2rem;
  .card {
    display: flex;
    flex-direction: column;
    width: 289px;
    align-items: center;
    margin-bottom: 1rem;
    padding: 0.5rem;
    background-color: #eef5f9;
    .card-title {
      width: 85%;
      min-height: 45%;
      font-weight: 600;
      border-bottom: 1px solid #d3e8ec;
      padding-bottom: 0;
      display: flex;
      align-items: center;
      justify-content: center;
      p {
        padding-bottom: 1rem;
      }
    }
    .card-text {
      width: 90%;
      padding: 1rem 0;
      p {
        padding: 0;
        line-height: 2rem;
      }
    }
  }
  //Media query 600px - cards
  @media (min-width: 600px) {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 2rem;
    .card {
      min-height: 180px;
      margin-right: 1rem;
    }
  }
}

.customer-interviews {
  max-width: 100% !important;
  width: 100% !important;
  margin: 0 !important;
  .section-title,
  .section-content {
    width: 90%;
    margin: 0 auto;
  }
}

//Links to other case studies
.readmore {
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 5rem auto;
  .heading {
    padding-top: 2rem;
    border-top: 1px solid @text-body;
  }
  .othercases {
    width: 90%;
    padding: 2rem 0 0;

    //Media query 600px
  }
}

.process {
  h2 {
    font-weight: 500;
    font-size: 1.625;
    color: #0249b4 !important;
  }
}

